--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "eslint-config-next": "13.2.3",
     "framer-motion": "^10.6.1",
     "gsap": "^3.11.5",
-    "next": "13.2.3",
+    "next": "^14.2.3",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-intersection-observer": "^9.4.3",
